update footer verbiage & anchors

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -73,7 +73,7 @@
 </section>
 
 <footer class="footer">
-  <p>by <a href="https://brian.staruk.me">brian staruk</a> | <a href="https://github.com/bstaruk/starbase">check me out!</a></p>
+  <p>created by <a href="https://brian.staruk.me">brian staruk</a> | <a href="https://github.com/bstaruk/brians-password-maker">check me out!</a></p>
 </footer>
 <script src="assets/app.js"></script>
 </body>
