--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,6 +5,7 @@
   <title>pw.staruk.me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="assets/app.css">
+  <meta name="theme-color" content="#42315d">
 </head>
 <body>
 <header class="header">
