--- a/src/static/index.html
+++ b/src/static/index.html
@@ -30,7 +30,7 @@
 
       <div class="form__row">
         <label for="passLength" class="form__label">Password Length:</label>
-        <input type="number" id="passLength" name="passLength" value="20" class="form__input" />
+        <input type="number" id="passLength" name="passLength" min="8" max="99" value="20" class="form__input form__input--small" />
       </div>
 
       <div class="form__row">
@@ -42,6 +42,7 @@
               Use letters?
             </label>
           </li>
+
           <li>
             <label for="useNumbers" class="form__label">
               <input type="checkbox" id="useNumbers" name="useNumbers" value="yes" class="form__checkbox" checked />
@@ -49,6 +50,7 @@
               Use numbers?
             </label>
           </li>
+
           <li>
             <label for="useSymbols" class="form__label">
               <input type="checkbox" id="useSymbols" name="useSymbols" value="yes" class="form__checkbox" checked />
@@ -56,6 +58,7 @@
               Use symbols?
             </label>
           </li>
+
           <li>
             <label for="useSpaces" class="form__label">
               <input type="checkbox" id="useSpaces" name="useSpaces" value="yes" class="form__checkbox" />
