index title update

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>pw.staruk.me</title>
+  <title>brian's password maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="assets/app.css">
   <meta name="theme-color" content="#212328">
