--- a/src/static/index.html
+++ b/src/static/index.html
@@ -74,7 +74,7 @@
 </section>
 
 <footer class="footer">
-  <p>created by <a href="https://brian.staruk.me">brian staruk</a> | <a href="https://github.com/bstaruk/ezpw-web">check me out!</a></p>
+  <p>created by <a href="https://brian.staruk.me" title="continue to brian.staruk.me">brian staruk</a> | <a href="https://github.com/bstaruk/ezpw-web" title="check out ezpw.co on github">check me out!</a></p>
 </footer>
 <script src="assets/app.js"></script>
 </body>
