--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>brian's password maker</title>
+  <title>Easy Random Password Generator - ezpw.co</title>
+  <meta name="description" content="Easy random password generator. Built for security: no ads, tracking or server-side scripts. Fully open source. Cheers!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="assets/app.css">
   <meta name="theme-color" content="#212328">
 </head>
 <body>
 <header class="header">
-  <h1>brian's password maker</h1>
+  <h1>brian's random password maker</h1>
 </header>
 
 <section class="wrapper">
@@ -73,7 +74,7 @@
 </section>
 
 <footer class="footer">
-  <p>created by <a href="https://brian.staruk.me">brian staruk</a> | <a href="https://github.com/bstaruk/brians-password-maker">check me out!</a></p>
+  <p>created by <a href="https://brian.staruk.me" title="continue to brian.staruk.me">brian staruk</a> | <a href="https://github.com/bstaruk/ezpw-web" title="check out ezpw.co on github">check me out!</a></p>
 </footer>
 <script src="assets/app.js"></script>
 </body>
